kustomizer/tests/kustomizer/testdata/reference/resource-has-anchor/output.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
spec:
  tls:
    - hosts:
        - xyz.me
        - www.xyz.me
      secretName: cert-tls
  rules:
    - host: xyz.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
    - host: www.xyz.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
